<resources>
    <string name="app_name">Conecta FAHZ</string>
    <string name="logo">Fundação Zerrenner</string>
    <string name="label_welcome">Bem vindo,</string>
    <string name="label_type_it">Digite o CPF e senha para continuar</string>
    <string name="label_welcome_first_access">Bem-vindo ao primeiro acesso</string>
    <string name="label_fill_first_access">Preencha os campos abaixo para continuar</string>
    <string name="hint_cpf">CPF</string>
    <string name="dialog_question">Por onde deseja receber a senha temporária? </string>
    <string name="dialog_message">O link para a alteração da senha foi enviado para o e-mail cadastrado</string>
    <string name="dialog_message_SMS">A sua senha temporária foi enviada para seu telefone.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_error3">Usuário ou senha inválidos</string>
    <string name="dialog_error5">Encontramos alguns problemas no seu CPF. Em caso de dúvidas entre em contato com o departamento de RH</string>
    <string name="required">\*</string>
    <string name="hint_name">Nome</string>
    <string name="hint_date_of_birth">Data de Nasc.</string>
    <string name="hint_date_of_birth_personal">Data de Nasc. *</string>
    <string name="hint_password">Senha</string>
    <string name="hint_password_confirm">Confirme sua senha</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_branch">Ramal</string>
    <string name="hint_email_confirm">Confirme seu e-mail</string>
    <string name="label_first_access">Primeiro Acesso?</string>
    <string name="label_click_here">Clique aqui!</string>
    <string name="checkbox_keep_connected">Manter conectado</string>
    <string name="label_forgot_password">Esqueceu sua senha?</string>
    <string name="label_have_registration">Já possui cadastro?</string>
    <string name="button_enter">Entrar</string>
    <string name="button_support">Acessar o Suporte</string>
    <string name="button_next">Próximo</string>
    <string name="button_cancel">Cancelar</string>
    <string name="description_password">Senha</string>
    <string name="title_change_password">Alteração de senha</string>
    <string name="hint_current_password">Senha atual</string>
    <string name="hint_new_password">Nova senha</string>
    <string name="hint_confirm_new_password">Confirmar nova senha</string>
    <string name="button_save">Salvar</string>
    <string name="label_personal_data">Dados Pessoais</string>
    <string name="text_change_personal_data">Altere seus dados pessoais</string>
    <string name="text_change_bank_data">Altere seus dados bancários</string>
    <string name="text_change_address">Altere seu endereço</string>
    <string name="fragment_personal_data">Dados pessoais</string>
    <string name="fragment_address">Endereço</string>
    <string name="fragment_bank_data">Dados bancários</string>
    <string name="hint_full_name">Nome completo</string>
    <string name="hint_full_name_mother">Nome da mãe completo</string>
    <string name="hint_full_name_mother_personal">Nome da mãe completo*</string>
    <string name="hint_sex">Sexo</string>
    <string name="hint_sex_personal">Sexo*</string>
    <string name="hint_nationally">Nacionalidade</string>
    <string name="hint_civilState">Estado Civil</string>
    <string name="hint_civilState_personal">Estado Civil*</string>
    <string name="hint_uf_birth">UF de nasc.</string>
    <string name="hint_uf_birth_personal">UF de Nasc.*</string>
    <string name="hint_city_of_birth">Cidade de Nasc.</string>
    <string name="hint_city_of_birth_personal">Cidade de Nasc.*</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_cellphone">Celular</string>
    <string name="not_valid_cellphone">Celular não deve conter código do país somente DDD, por favor verificar.</string>
    <string name="not_valid_phone">Telefone não deve conter código do país somente DDD, por favor verificar.</string>
    <string name="hint_CEP">CEP</string>
    <string name="hint_public_place">Logradouro</string>
    <string name="hint_number">Número</string>
    <string name="hint_neighborhood">Bairro</string>
    <string name="hint_uf">UF</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_complement">Complemento</string>
    <string name="hint_country">País</string>
    <string name="hint_bank">Banco</string>
    <string name="hint_agency">Agência</string>
    <string name="hint">A conta não pode ser Conta Salário.</string>
    <string name="hint_account">Conta</string>
    <string name="not_valid_personal_data">Por favor verifique os campos a seguir: </string>
    <string name="text_foreign">estrangeira</string>
    <string name="label_documents">Gestão de Documentos</string>
    <string name="text_filter_document">Filtre a documentação necessária pelo nome</string>
    <string name="text_data_document">Documentos para completar a ação</string>
    <string name="text_data_document_for_done">Para confirmar a Inativação do Cadastro envie os documentos solicitado e Salve.</string>
    <string name="text_data_document_person">Documentos para completar a ação de: </string>
    <string name="label_name">Nome</string>
    <string name="label_benefit">Benefício</string>
    <string name="label_document">DOCUMENTOS</string>
    <string name="label_type_document">Tipo de Documentos</string>
    <string name="label_file">Arquivo</string>
    <string name="label_action">Ação</string>
    <string name="content_description_document">Tipo de documento</string>
    <string name="button_add">Adicionar</string>
    <string name="text_document_inclusion">Inclusão: %1$s</string>
    <string name="label_benefits">Gestão de benefícios</string>
    <string name="text_benefits">INCLUA OU REMOVA OS BENEFÍCIOS</string>
    <string name="text_status">Status</string>
    <string name="label_dependents">Dependentes</string>
    <string name="label_inactive_register_dependents">Inativar Cadastro</string>
    <string name="label_title_dependent">Inclua ou remova seus dependentes</string>
    <string name="label_title_new_dependent">Cadastre seu Dependente</string>
    <string name="label_title_dependent_edit">Altere os dados do dependente</string>
    <string name="content_description_edit">Editar</string>
    <string name="content_description_delete">Deletar</string>
    <string name="button_new_dependent">Adicionar Dependente</string>
    <string name="button_active_dependent">Ativos</string>
    <string name="button_inactive_dependent">Inativos</string>
    <string name="label_dependent">Dependente</string>
    <string name="hint_degree_kinship">Grau de Parentesco</string>
    <string name="hint_gender">Sexo</string>
    <string name="hint_civil_status">Estado Civil</string>
    <string name="hint_nationality">Nacionalidade</string>
    <string name="hint_nationality_personal">Nacionalidade*</string>
    <string name="hint_student">Estudante</string>
    <string name="invalid">nome?</string>
    <string name="dialog_title_upload">Upload de Documento</string>
    <string name="dialog_title">Atenção</string>
    <string name="dialog_title_recusa_termos"><![CDATA[<b><font color=#ff0000>RECUSA DE TERMOS</font></b>]]></string>
    <string name="dialog_message_cpf">CPF</string>
    <string name="dialog_message_pending">Pendente</string>
    <string name="dialog_message_completed">Concluído</string>
    <string name="dialog_message_file">O arquivo deve ter no máximo 1MB</string>
    <string name="dialog_button_send">Enviar</string>
    <string name="dialog_button_cancel">Cancelar</string>
    <string name="dialog_button_confirm">confirmar</string>
    <string name="dialog_message_remove_dependent">Deseja remover o dependente selecionado dos beneficios em que foi cadastrado?</string>
    <string name="request_permission">Este aplicativo precisa permissão de camera.</string>
    <string name="request_permission_storage">Este aplicativo precisa permissão de armazenamento.</string>
    <string name="request_permission_record_audio">Este aplicativo precisa permissão de audio.</string>
    <string name="camera_error">Este dispositivo não suporta a API de camera.</string>
    <string name="error_cpf_invalid">CPF inválido</string>
    <string name="error_cpf_empty">CPF não pode ser vazio.</string>
    <string name="error_birthdate_empty">A data de nascimento não pode ser vazio.</string>
    <string name="error_birthdate_invalid">A data de nascimento inválido</string>
    <string name="error_password_short">A senha deve conter no minimo 08 caracteres, uma letra e um número</string>
    <string name="error_password_empty">A senha não pode ser vazia.</string>
    <string name="error_password_not_equals">As senhas não correspondem</string>
    <string name="hint_digit_agency">Díg</string>
    <string name="nav_header_desc">photo</string>
    <string name="user_name">Nome do Usuário</string>
    <string name="initialPage">Página Inicial</string>
    <string name="navigation_drawer_open">Aberto</string>
    <string name="navigation_drawer_close">Fechado</string>
    <string name="close">Fechar</string>
    <string name="dialog_camera">Câmera</string>
    <string name="dialog_text_photo">Tire uma foto</string>
    <string name="dialog_gallery">Galeria</string>
    <string name="dialog_text_gallery">Selecione da galeria</string>
    <string name="device_not_support_camera">Desculpe, seu dispositivo não suporta câmera</string>
    <string name="validateSentData">Erro no envio dos dados. Valide a informação enviada.</string>
    <string name="problemServer">Problema de comunicação com o servidor. Tente novamente mais tarde.</string>
    <string name="connectionProblemRequest">Estamos com dificuldades para nos conectar ao servidor. Verifique sua conexão ou tente novamente mais tarde.</string>
    <plurals name="question_problem">
        <item quantity="one">Problema na questão:</item>
        <item quantity="other">Problema nas questões:</item>
    </plurals>
    <string name="chooseTypeDocument">Qual tipo de documento você deseja subir?</string>
    <string name="cancel_modal">Cancelar</string>
    <string name="back_modal">Voltar</string>
    <string name="confirm_modal">Confirmar</string>
    <string name="ok_modal">OK</string>
    <string name="health_plan">Plano Médico</string>
    <string name="scholarship">Bolsa de Estudos</string>
    <string name="christmas">Produtos Natalinos</string>
    <string name="dental_plan">Plano Odonto</string>
    <string name="school_supplies">Material Escolar</string>
    <string name="pharmacy">Farmácia</string>
    <string name="toy">Brinquedo</string>
    <string name="doubts">Saiba Mais</string>
    <string name="questionsandanswers">Dúvidas</string>
    <string name="NoFragmentFoud">Não foi encontrado o fragmento buscado.</string>
    <string name="hi">Olá,</string>
    <string name="question">O que você deseja fazer?</string>
    <string name="include_plan">Solicitar Ativação</string>
    <string name="include_dependent">Incluir Dependente</string>
    <string name="change_operator">Alterar Operadora</string>
    <string name="accenture">2018 - Versão %1$s(%2$s) - Desenvolvido pela Accenture</string>
    <string name="title_terms">Termos de Uso</string>
    <string name="terms"><b>Information </b> information</string>
    <string name="terms_accept">Aceitar</string>
    <string name="terms_refuse">Recusar</string>
    <string name="accept_terms">Eu aceito os termos.</string>
    <string name="beneficiary_data_text">Confirme se os dados cadastrais estiverem corretos.</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="sua_altura">Exemplo: 1,70</string>
    <string name="seu_peso">Exemplo: 70,000</string>
    <string name="imc">IMC</string>
    <string name="religiao">Religião</string>
    <string name="pesquisar_religiao">Pesquisar religião</string>
</resources>