<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDefault"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo_conecta_fahz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginBottom="6dp"
            android:text="@string/label_welcome_first_access"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/blue_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/opensans_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/label_fill_first_access"
            android:textStyle="normal"
            app:fontFamily="@font/opensans_semibold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cpf_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/opensansregular"
            android:hint="@string/hint_cpf">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cpf_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="11"
                android:textSize="@dimen/text_size_medium"
                android:drawableEnd="@drawable/ic_cancel"
                app:fontFamily="@font/opensansregular"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:fontFamily="@font/opensansregular">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:focusable="true"
                android:inputType="textAutoComplete"
                android:textSize="@dimen/text_size_medium"
                app:fontFamily="@font/opensans_semibold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthdate_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date_of_birth"
            app:fontFamily="@font/opensansregular">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthdate_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_calendar"
                android:inputType="date"
                android:textSize="@dimen/text_size_medium"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:fontFamily="@font/opensans_semibold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:fontFamily="@font/opensansregular">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_medium"
                app:fontFamily="@font/opensans_semibold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/hint_cellphone"
            android:textColorHint="@color/grey_dark"
            android:textSize="@dimen/text_size_medium">

            <br.com.avanade.fahz.controls.PhoneEditText
                android:id="@+id/cellphone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="15"
                android:textColor="@color/black"
                app:fontFamily="@font/opensans_semibold"
                android:textSize="@dimen/text_size_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true"
            app:fontFamily="@font/opensansregular">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                app:fontFamily="@font/opensansregular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_confirm_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_confirm"
            app:fontFamily="@font/opensansregular"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_confirm_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                app:fontFamily="@font/opensansregular" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button_enter"
            android:text="@string/button_enter"
            android:textColor="@color/white01"
            android:textSize="12sp"
            app:fontFamily="@font/opensansregular"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/text_have_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/label_have_registration"/>
            <TextView
                android:id="@+id/text_click_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_click_here"
                android:layout_toEndOf="@id/text_have_registration"
                android:textColor="@color/blue_dark"
                app:fontFamily="@font/opensans_bold"/>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>