<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/terms_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white01"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/title_terms"
        android:textAllCaps="true"
        android:textColor="@color/operator_blue"
        android:textSize="@dimen/text_size_small"
        app:fontFamily="@font/opensans_bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/relative_layout_bottom_content"
        android:layout_below="@id/text_title">

        <LinearLayout
            android:id="@+id/linear_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/txtTermText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_accept_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms" />
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/relative_layout_bottom_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnDialogCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@drawable/sec_button"
                android:text="@string/terms_refuse"
                android:textColor="@color/blueHeader" />

            <Button
                android:id="@+id/btnDialogSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@drawable/custom_button_enter"
                android:text="@string/terms_accept"
                android:textColor="@color/white_text" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>